# src/routes/blogs.ts
@@ -5,6 +5,10 @@ const router = express.Router();
 
 router.post('/', BlogController.create);
 router.get('/', BlogController.get);
+router.put('/:id', BlogController.updateBlog);
+router.delete('/:id', BlogController.deleteBlog);
+router.delete('/trash/:id', BlogController.trashBlog);
+router.get("/:slug", BlogController.getBlogBySlug);
 router.get('/categories', BlogController.getCategory);
 router.post('/categories', BlogController.createCategory);
 
